--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [pytest]
-addopts = --ignore=setup.py --pep8 --cov-report term-missing --cov life -rsx
+addopts = -v --ignore=setup.py --pep8 --cov-report term-missing --cov life -rsx
 norecursdirs = *.egg
 pep8ignore = * E501
